<resources>
    <string name="app_name">Alphabet Book</string>
    <string name="button_first">First page (‘A’)</string>
    <string name="button_previous">Previous page</string>
    <string name="button_next">Next page</string>
    <string name="button_last">Last page (‘Z’)</string>
    <string name="button_overview">Overview</string>
    <string name="menuItem_overview">Overview</string>
</resources>